# datafusion-odata

./: Cargo.toml  README.md
.github/workflows/: build.yaml
data/: covid.parquet
examples/: simple_service.rs
examples/data/: tickers.parquet
examples/mocks/: metadata.xml
mock/: collection.xml  metadata.xml  service.xml
src/: atom.rs  collection.rs  context.rs  error.rs  filter.rs  handlers.rs  lib.rs  main.rs  metadata.rs
src/odata/: atom.rs  collection.rs  metadata.rs  mod.rs  query.rs  service.rs
test/: service.yaml
tests/: pod.yaml  shared.rs  test_collection_handler.rs  test_handlers.rs
