[package]
name = "datafusion-odata"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/kamu-data/datafusion-odata"
description = "OData protocol adapter for Apache Datafusion"
keywords = ["datafusion", "sql", "arrow", "odata", "rest"]
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
axum = { version = "0.6", features = ["headers"] }
chrono = { version = "0.4", default-features = false }
datafusion = { version = "36", default-features = false }
http = "0.2"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
datafusion = { version = "36", default-features = false, features = ["parquet"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }