[package]
name = "datafusion-odata"
version = "41.1.0"
edition = "2021"
repository = "https://github.com/kamu-data/datafusion-odata"
description = "OData protocol adapter for Apache Datafusion"
keywords = ["datafusion", "sql", "arrow", "odata", "rest"]
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7" }
chrono = { version = "0.4", default-features = false }
datafusion = { version = "41", default-features = false }
hyper = { version = "1", features = ["server"] }
http = "1.1"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }
tracing = "0.1"

[dev-dependencies]
datafusion = { version = "41", default-features = false, features = [
    "parquet",
] }
indoc = { version = "2" }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[patch.crates-io]
# datafusion = { git = 'https://github.com/apache/arrow-datafusion.git', tag = '37.0.0-rc1' }
